--- a/src/app/common/header/header.component.html
+++ b/src/app/common/header/header.component.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand">Levvme</a>
+      <a class="navbar-brand">Products Master</a>
     </div>
 
     <div class="navbar-form navbar-right">
